--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,8 +5,9 @@
   set_fact:
     dns_block: "{{ dns_block_start + '\n' }}"
 
-- name: Determine fetch task file based on dns_provider
-  set_fact:
+- name: Include provider-specific fetch tasks
+  include_tasks: "{{ fetch_task_file }}"
+  vars:
     fetch_task_file: >-
       {% if dns_provider == 'cloudflare' %}
       {{ role_path }}/tasks/saas_cloudflare_fetch_zone.yml
@@ -16,11 +17,6 @@
       {{ role_path }}/tasks/saas_cloudflare_fetch_zone.yml
       {% endif %}
 
-- name: Fetch all zones and DNS records based on provider
-  include_tasks: "{{ fetch_task_file }}"
-  loop: "{{ dns_zones }}"
-  loop_control:
-    loop_var: zone_item
 
 - name: Generate DNS block and update inventory
   include_tasks: generate_block.yml
