--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,16 @@
 ---
 # tasks file for ansible_role_pull_dns_zones
 
-- name: Initialize DNS block
-  set_fact:
-    dns_block: "{{ dns_block_start + '\n' }}"
-
-- name: Determine fetch task file based on dns_provider
-  set_fact:
-    fetch_task_file: >
-      {% if dns_provider == 'cloudflare' %}
-      {{ role_path }}/tasks/saas_cloudflare_fetch_zone.yml
-      {% elif dns_provider == 'route53' %}
-      {{ role_path }}/tasks/aws_route53_fetch_zone.yml
-      {% else %}
-      {{ role_path }}/tasks/saas_cloudflare_fetch_zone.yml
-      {% endif %}
-
+- name: Include provider-specific fetch tasks
+  include_tasks: >
+    {% if dns_provider == 'cloudflare' %}
+    {{ role_path }}/tasks/saas_cloudflare_fetch_zone.yml
+    {% elif dns_provider == 'route53' %}
+    {{ role_path }}/tasks/aws_route53_fetch_zone.yml
+    {% else %}
+    {{ role_path }}/tasks/saas_cloudflare_fetch_zone.yml
+    {% endif %}
 
 - name: Generate DNS block and update inventory
-  include_tasks: generate_block.yml
+  include_tasks: "{{ role_path }}/tasks/generate_block.yml"
+
