--- a/tasks/generate_block.yml
+++ b/tasks/generate_block.yml
@@ -1,15 +1,33 @@
-- name: Generate DNS block from all_cf_entries
+- name: Read current inventory file
+  slurp:
+    src: "{{ inventory_file }}"
+  register: inventory_raw
+
+- name: Decode inventory file to string
+  set_fact:
+    inventory_text: "{{ inventory_raw.content | b64decode }}"
+
+- name: Determine indentation of DNS block
+  set_fact:
+    dns_indent: >-
+      {{
+        (inventory_text
+         | regex_search('^( *)' ~ dns_block_start, '\\1')
+        ) | length
+      }}
+
+- name: Generate DNS block from all_cf_entries with dynamic indentation
   set_fact:
     dns_block: |
-      {{ dns_block_start }}
-      {% for zone in all_cf_entries %}
-      - zone: {{ zone.zone }}
-        dns_entries:
-      {% for entry in zone.dns_entries %}
-        - { name: "{{ entry.name }}", type: "{{ entry.type }}", value: "{{ entry.content }}" }
-      {% endfor %}
-      {% endfor %}
-      {{ dns_block_end }}
+      {{ ' ' * dns_indent }}{{ dns_block_start }}
+{% for zone in all_cf_entries %}
+{{ ' ' * (dns_indent + 2) }}- zone: {{ zone.zone }}
+{{ ' ' * (dns_indent + 4) }}dns_entries:
+{% for entry in zone.dns_entries %}
+{{ ' ' * (dns_indent + 6) }}- { name: "{{ entry.name }}", type: "{{ entry.type }}", value: "{{ entry.content }}" }
+{% endfor %}
+{% endfor %}
+{{ ' ' * dns_indent }}{{ dns_block_end }}
 
 - name: Replace DNS block in inventory file
   replace:
