--- a/tasks/generate_block.yml
+++ b/tasks/generate_block.yml
@@ -16,25 +16,21 @@
         ) | length
       }}
 
-- name: Generate DNS block from all_cf_entries with dynamic indentation
+- name: Generate DNS YAML block with dynamic indentation
   set_fact:
     dns_block: |
-      {{ ' ' * dns_indent }}{{ dns_block_start }}
-{% for zone in all_cf_entries %}
-{{ ' ' * (dns_indent + 2) }}- zone: {{ zone.zone }}
-{{ ' ' * (dns_indent + 4) }}dns_entries:
-{% for entry in zone.dns_entries %}
-{{ ' ' * (dns_indent + 6) }}- { name: "{{ entry.name }}", type: "{{ entry.type }}", value: "{{ entry.content }}" }
-{% endfor %}
-{% endfor %}
-{{ ' ' * dns_indent }}{{ dns_block_end }}
+      {{ dns_block_start_marker }}
+      {{ cf_zones | to_nice_yaml(indent=dns_block_indent, width=999) | indent(dns_block_indent) }}
+      {{ dns_block_end_marker }}
+
+- name: Show generated DNS block
+  debug:
+    msg: "{{ dns_block }}"
 
 - name: Replace DNS block in inventory file
   replace:
     path: "{{ inventory_file }}"
-    regexp: "(?s){{ dns_block_start }}.*{{ dns_block_end }}"
+    regexp: "(?s){{ dns_block_start_marker }}.*{{ dns_block_end_marker }}"
     replace: "{{ dns_block }}"
-
-- name: Debug DNS block
-  debug:
-    msg: "{{ dns_block }}"
+    backup: true
+    diff: true
