--- a/tasks/generate_block.yml
+++ b/tasks/generate_block.yml
@@ -9,10 +9,10 @@
 
 - name: Determine indentation of DNS block
   set_fact:
-    dns_indent: >-
+    dns_block_indent: >-
       {{
         (inventory_text
-         | regex_search('^( *)' ~ dns_block_start, '\\1')
+         | regex_search('^([ \\t]*)' ~ dns_block_start_marker, '\\1', multiline=True)
         ) | length
       }}
 
