--- a/tasks/generate_block.yml
+++ b/tasks/generate_block.yml
@@ -12,7 +12,7 @@
     dns_block_indent: >-
       {{
         (inventory_text
-         | regex_search('^([ \\t]*)' ~ dns_block_start_marker, '\\1', multiline=True)
+         | regex_search('^([ \\t]*)' ~ dns_block_start, '\\1', multiline=True)
         ) | length
       }}
 
