--- a/tasks/generate_block.yml
+++ b/tasks/generate_block.yml
@@ -1,32 +1,20 @@
-#- name: Read current inventory file
-#  slurp:
-#    src: "{{ inventory_file }}"
-#  register: inventory_raw
+- name: Read current inventory file
+  slurp:
+    src: "{{ inventory_file }}"
+  register: inventory_raw
 
-#- name: Decode inventory file to string
-#  set_fact:
-#    inventory_text: "{{ inventory_raw.content | b64decode }}"
-
-#- name: Determine indentation of DNS block
-#  set_fact:
-#    dns_block_indent: >-
-#      {{
-#        (inventory_text
-#         | regex_search('^([ \\t]*)' ~ dns_block_start, '\\1', multiline=True)
-#        ) | length
-#      }}
-
+- name: Decode inventory file to string
+  set_fact:
+    inventory_text: "{{ inventory_raw.content | b64decode }}"
 
 - name: Determine indentation of DNS block
   set_fact:
-    input : "{{ lookup('template', inventory_file) }}"
-
-- name: Write indentation of DNS block to variable
-  set_fact:    
-    target: "{{ input | regex_replace('[\s]*dns_block_start', '\\1') }}"
-
-- debug:
-  msg: "{{target }}"
+    dns_block_indent: >-
+      {{
+        (inventory_text
+         | regex_search('^([ \\t]*)' ~ dns_block_start, '\\1', multiline=True)
+        ) | length
+      }}
 
 - name: Generate DNS YAML block with dynamic indentation
   set_fact:
