--- a/tasks/generate_block.yml
+++ b/tasks/generate_block.yml
@@ -19,7 +19,11 @@
 - name: Determine indentation of DNS block safely
   set_fact:
     indent_matches: "{{ inventory_text | regex_findall('^([ \t]*)' ~ dns_block_start, multiline=True) }}"
-    dns_block_indent: "{{ indent_matches[0] | length if indent_matches | length > 0 else 0 }}"
+
+- name: Determine indentation of DNS block safely 2
+  set_fact:
+  dns_block_indent: "{{ indent_matches[0] | length if indent_matches | length > 0 else 0 }}"
+
 
 - name: Generate DNS YAML block with dynamic indentation
   set_fact:
