--- a/tasks/generate_block.yml
+++ b/tasks/generate_block.yml
@@ -69,7 +69,7 @@
   debug:
     msg: "{{ dns_block }}"
 
-- name: Remove (hashtag) BLOCK START
+- name: Remove (hashtag) BLOCK 
   lineinfile:
     path: "{{ inventory_file }}"
     state: absent
@@ -101,20 +101,20 @@
   diff: true
 
   - name: Insert DNS markers if missing
-  shell: |
-    #!/bin/bash
-    file="{{ inventory_file }}"
-    # Insert START if missing
-    grep -q '# BLOCK START' "$file" || \
-    sed -i '/^\s*dns_zones:/a \ \ # BLOCK START' "$file"
-    # Insert END if missing: after last '- ' line under dns_zones, before next param
-    grep -q '# BLOCK END' "$file" || \
-    awk '
-    BEGIN {start_inserted=0}
-    /^\s*dns_zones:/ {in_block=1; print; next}
-    in_block && /^  - / {last_entry_line=NR}
-    in_block && /^[^ ]/ && last_entry_line {print prev_line; print "  # BLOCK END"; in_block=0; next}
-    {prev_line=$0; print}
-    END {
-      if(in_block && last_entry_line) print "  # BLOCK END"
-    }' "$file" > "$file.tmp" && mv "$file.tmp" "$file"
+    shell: |
+      #!/bin/bash
+      file="{{ inventory_file }}"
+      # Insert START if missing
+      grep -q '# BLOCK START' "$file" || \
+      sed -i '/^\s*dns_zones:/a \ \ # BLOCK START' "$file"
+      # Insert END if missing: after last '- ' line under dns_zones, before next param
+      grep -q '# BLOCK END' "$file" || \
+      awk '
+      BEGIN {start_inserted=0}
+      /^\s*dns_zones:/ {in_block=1; print; next}
+      in_block && /^  - / {last_entry_line=NR}
+      in_block && /^[^ ]/ && last_entry_line {print prev_line; print "  # BLOCK END"; in_block=0; next}
+      {prev_line=$0; print}
+      END {
+        if(in_block && last_entry_line) print "  # BLOCK END"
+      }' "$file" > "$file.tmp" && mv "$file.tmp" "$file"
