--- a/tasks/generate_block.yml
+++ b/tasks/generate_block.yml
@@ -92,13 +92,13 @@
     content: |
       #!/usr/bin/env python3
       import sys
-      from ruamel.yaml import YAM
+      from ruamel.yaml import YAML
       yaml = YAML()
-      yaml.preserve_quotes = Tru
+      yaml.preserve_quotes = True
       input_file = sys.argv[1]
-      output_file = sys.argv[2
+      output_file = sys.argv[2]
       with open(input_file, 'r') as f:
-          data = yaml.load(f
+          data = yaml.load(f)
       with open(output_file, 'w') as f:
           yaml.dump(data, f)
     mode: '0755'
