--- a/tasks/generate_block.yml
+++ b/tasks/generate_block.yml
@@ -86,6 +86,9 @@
     name: ruamel.yaml
     state: present
 
+- name: script path
+  set_fact:
+    script_path: "/tmp/fix_yaml.py"
 - name: "Lege Python-Skript zum Korrigieren der YAML-Datei ab"
   ansible.builtin.copy:
     dest: "{{ script_path }}"
