change structure to use extra file instead of inventory file

--- a/tasks/saas_cloudflare_fetch_zones.yml
+++ b/tasks/saas_cloudflare_fetch_zones.yml
@@ -4,8 +4,8 @@
 
 - name: Variablen aus Datei laden
   include_vars:
-    file: dns_zones_file
-    name: dns_zones_file
+    file: "{{ dns_zones_file }}"
+    name: dns_zones_file_content
 
 - name: Fetch Cloudflare Zone IDs
   uri:
@@ -15,7 +15,7 @@
       Authorization: "Bearer {{ api_token }}"
       Content-Type: "application/json"
     return_content: yes
-  loop: "{{ dns_zones_file.dns_zones }}"
+  loop: "{{ dns_zones_file_content.dns_zones }}"
   loop_control:
     loop_var: item
   register: zone_info_results
