--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
@@ -18,7 +18,7 @@
 
 - name: Fetch Cloudflare Zone IDs
   uri:
-    url: "{{ cloudflare_api_base }}?name={{ item.zone }}"
+    url: "{{ cloudflare_api_base }}?name={{ item }}"
     method: GET
     headers:
       Authorization: "Bearer {{ api_token }}"
