--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
@@ -29,6 +29,10 @@
     loop_var: item
   register: zone_info_results
 
+- name: Debug Cloudflare zone_info_results
+  debug:
+    var: zone_info_results
+
 - name: Fetch DNS records per zone (loop via include_tasks)
   include_tasks: "{{ role_path }}/tasks/cloudflare_saas/cloudflare_saas_fetch_single_zone.yml"
   loop: "{{ zone_info_results.results }}"
