change full structure and fixes

--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_all.yml
@@ -40,4 +40,4 @@
     loop_var: zone_item
   vars:
     zone_id: "{{ zone_item.json.result[0].id }}"
-    zone_name: "{{ zone_item.item.zone }}"
+    zone_name: "{{ zone_item.item }}"
