--- a/tasks/cloudflare_saas/cloudflare_saas_fetch_single_zone.yml
+++ b/tasks/cloudflare_saas/cloudflare_saas_fetch_single_zone.yml
@@ -21,4 +21,4 @@
 
 - name: Add zone records to dns_zones_all_remote
   set_fact:
-    dns_zones_all_remote: "{{ dns_zones_all_remote + [ { 'zone': zone_name, 'dns_entries': dns_entries } ] }}"
+    dns_zones_all_remote: "{{ dns_zones_all_remote | default([]) + [ { 'zone_id': zone_id, 'zone_name': zone_name } ] }}"
